--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,19 +3,34 @@ en:
     application_helper:
       base_title: "Ruby on Rails Tutorial Sample App"
 
+  layouts:
+    header:
+      home: "Home"
+      help: "Help"
+      login: "Log in"
+      users: "Users"
+      account: "Account"
+      profile: "Profile"
+      setting: "Setting"
+      logout: "Logout"
+
   static_pages:
     home:
+      title: "Home"
       signupnow: "Sign up now!"
       welcome: "Welcome to the Sample App"
       test1: "This is the home page for the"
       test2: "sample application."
+
     contact:
       contact: "Contact"
       dis1: "Contact the Ruby on Rails Tutorial about the sample app at the"
+
     help:
       help: "Help"
       test1: "Get help on the Ruby on Rails Tutorial at the"
       test2: "To get help on this sample app, see the"
+
     about:
       about: "About"
       the: "The"
@@ -25,14 +40,45 @@ en:
       to_teach: "to teach web development with"
       sample_app: " This is the sample app for the tutorial."
       book: "book"
+
     footer:
       content: "Content"
       news: "News"
       by: "by"
-    header:
-      home: "Home"
-      help: "Help"
-      login: "Log in"
+
     application:
       english: "English"
       vietnamese: "Vietnamese"
+
+  users:
+    new:
+      title: "Sign Up"
+      form:
+        name: "Name"
+        email: "Email"
+        password: "Password"
+        password_confirmation: "Password confirmation"
+        btn_submit: "Create my account"
+
+    show:
+      not_found_user: "User not found!"
+
+    create:
+      signup_success: "Welcome to the Sample App!"
+
+  shared:
+    error_form: "The form contains"
+    error: "error"
+
+  sessions:
+    new:
+      title: "Log in"
+      new_user: "New user?"
+      signupnow: "Sign up now!"
+      form:
+        email: "Email"
+        password: "Password"
+        btn_submit: "Log in"
+
+    create:
+      invalid: "Invalid email/password combination"
