--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1,17 +1,31 @@
-en:
+vi:
   helpers:
     application_helper:
       base_title: "Hướng dẫn Sample App Ruby on Rails"
 
+  layouts:
+    header:
+      home: "Trang chủ"
+      help: "Trợ giúp"
+      login: "Đăng nhập"
+      users: "Người dùng"
+      account: "Tài khoản"
+      profile: "Hồ sơ"
+      setting: "Cài đặt"
+      logout: "Đăng xuất"
+
   static_pages:
     home:
+      title: "Trang chủ"
       signupnow: "Đăng ký ngay!"
       welcome: "Chào mừng đến với Sample App"
       test1: "Đây là trang chủ của"
       test2: "Ứng dụng mẫu."
+
     contact:
       contact: "Liên hệ"
       dis1: "Liên hệ tới "
+
     help:
       help: "Trợ giúp"
       test1: "Xem trợ giúp về hướng dẫn Ruby on Rails Turial tại"
@@ -32,11 +46,39 @@ en:
       news: "Tin tức"
       by: "bởi"
 
-    header:
-      home: "Trang chủ"
-      help: "Đăng nhập"
-      login: "Trợ giúp"
-
-      application:
+    application:
       english: "Tiếng Anh"
       vietnamese: "Tiếng Việt"
+
+  users:
+    new:
+      title: "Đăng ký"
+      form:
+        name: "Tên"
+        email: "Email"
+        password: "Mật khẩu"
+        password_confirmation: "Nhập lại mật khẩu"
+        btn_submit: "Tạo tài khoản"
+
+    show:
+      not_found_user: "Không tìm thấy người dùng!"
+
+    create:
+      signup_success: "Chào mừng đến Sample App!"
+
+  shared:
+    error_form: "Form chứa"
+    error: "lỗi"
+
+  sessions:
+    new:
+      title: "Đăng nhập"
+      new_user: "Người dùng mới?"
+      signupnow: "Đăng ký ngay!"
+      form:
+        email: "Email"
+        password: "Mật khẩu"
+        btn_submit: "Đăng nhập"
+
+    create:
+      invalid: "Sai email hoặc mật khẩu"
