--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -105,6 +105,7 @@ en:
         password: "Password"
         btn_submit: "Log in"
         rememberme: "Remember me"
+        forgot_password: "Forgot password"
 
     create:
       invalid: "Invalid email/password combination"
@@ -115,9 +116,11 @@ en:
       activated: "Account activated!"
       invalid_link: "Invalid activation link"
 
+    user_not_found: "User not found!"
 
   mailers:
     account_activation_sub: "Account activation"
+    password_reset: "Password reset"
 
   user_mailer:
     account_activation:
@@ -125,3 +128,29 @@ en:
       wellcome: "Welcome to the Sample App! Click on the link below to activate your account:"
       hi: "Hi "
       sample_app: "Sample App"
+
+    password_reset:
+      title: "Password reset"
+      reset_click: "To reset your password click the link below:"
+      exp_hours: "This link will expire in two hours."
+      ignore: "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
+
+  password_resets:
+    not_found: "Account not found"
+    expired: "Password reset has expired."
+    new:
+      title: "Forgot password"
+      btn_submit: "Send link"
+
+    edit:
+      title: "Reset password"
+      btn_submit: "Update password"
+
+    create:
+      email_sent: "Email sent with password reset instructions"
+      send_failed: "Email address not found, please check entered email and try again"
+
+    update:
+      cant_be: "can't be empty"
+      reset_success: "Password has been reset"
+      reset_fail: "Some thing went wrong, try again"
